/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.4/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

javafx {
    version = "22.0.1"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}
// javafx {
//     version = "22"
//     modules = [ 'javafx.controls', 'javafx.fxml' ]
// }
repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    implementation 'org.openjfx:javafx-controls:14.0.2:mac'
    implementation 'org.openjfx:javafx-fxml:14.0.2:mac'
    // Use JUnit Jupiter for testing.
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // This dependency is used by the application.
    implementation 'com.google.guava:guava:32.1.1-jre'

    // https://mvnrepository.com/artifact/com.mysql/mysql-connector-j
    implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.3.0'


    // BCrypt for password hashing
    implementation 'org.mindrot:jbcrypt:0.4'
    implementation group: 'org.apache.xmlgraphics', name: 'fop', version: '2.6'
    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
    implementation 'org.apache.httpcomponents:httpmime:4.5.13'

    // ControlsFX for additional JavaFX controls
    implementation 'org.controlsfx:controlsfx:11.1.0'

    // Native Windows API
    implementation 'net.java.dev.jna:jna:5.14.0' 
    implementation 'net.java.dev.jna:jna-platform:5.14.0' 
}
// tasks.withType(JavaCompile) {
//     options.compilerArgs += ['--module-path', System.getenv('PATH_TO_FX')]
//     options.compilerArgs += ['--add-modules', 'javafx.controls,javafx.fxml']
// }

run {
    jvmArgs = ['--add-modules', 'javafx.controls,javafx.fxml']
}


// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(20)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'cookbook.App'
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}
// dependencies {
//     implementation 'org.apache.commons:commons-lang3:3.12.0' // Add Apache Commons Lang
//     implementation 'org.apache.commons:commons-io:2.11.0'    // Add Apache Commons IO
//     // Add more Apache Commons dependencies as needed
// }





// plugins {
//     // Apply the application plugin to add support for building a CLI application in Java.
//     id 'application'
//     id 'org.openjfx.javafxplugin' version '0.0.11'
// }
// sourceSets {
//     main {
//         resources {
//             srcDirs = ["src/main/java"]
//             // includes = ["**/*.fxml"]
//         }
//         // resources {
//         //     srcDirs = ["src/main/resources"]
//         //     includes = ["**/*.png", "**/*.jpg", "**/*.gif"]
//         // }
//     }
// }
// javafx {
//     version = "17.0.2"
//     modules = [ 'javafx.controls', 'javafx.fxml' ]
// }
// repositories {
//     // Use Maven Central for resolving dependencies.
//     mavenCentral()
// }
// dependencies {
//     // Use JUnit Jupiter for testing.
//     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
//     // This dependency is used by the application.
//     implementation 'com.google.guava:guava:30.1.1-jre'
//     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
//     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
//     implementation files('libs/mysql-connector-j-8.0.32.jar')
//     implementation "org.openjfx:javafx-fxml:17"
//     implementation 'javazoom:jlayer:1.0.1'
// }
// application {
//     // Define the main class for the application.
//     mainClass = 'cookbook.Cookbook'
// }
// tasks.named('test') {
//     // Use JUnit Platform for unit tests.
//     useJUnitPlatform()
// }